# holdmything

./: .gitmodules  CMakeLists.txt  QmlFileItem.cpp  QmlFileItem.h  QmlFileItemModel.cpp  QmlFileItemModel.h  README.md  main.cpp  main.qml
